Retocades definicions a EDOS I amb intenció de que tot quedi més clar i corregit els enunciats segons els canvis

--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -1458,14 +1458,14 @@
 		Aleshores direm que \((\phi_{\varepsilon})\) és una aproximació de la unitat.
 	\end{definition}
 	\begin{lemma}
-		\label{lema:Teorema d'aproximació polinòmica d'Stone-Weierstrass}
+		\label{lema:Teorema d'aproximació polinòmica de Weierstrass}
 		Sigui \(f\colon\mathbb{R}\longrightarrow\mathbb{R}\) una funció contínua amb suport compacte i \((\phi_{\varepsilon})_{\varepsilon\in\mathbb{R}}\) una aproximació de la unitat. Aleshores \(f\convolucio\phi_{\varepsilon}\) convergeix uniformement a \(f\) quan \(\varepsilon\) tendeix a \(0\).
 		\begin{proof}
 			%TODO %lol se ve to' tocha
 		\end{proof}
 	\end{lemma}
-	\begin{theorem}[Teorema d'aproximació polinòmica d'Stone-Weierstrass]
-		\labelname{Teorema d'aproximació polinòmica d'Stone-Weierstrass}\label{thm:Teorema d'aproximació polinòmica d'Stone-Weierstrass}
+	\begin{theorem}[Teorema d'aproximació polinòmica de Weierstrass]
+		\labelname{Teorema d'aproximació polinòmica de Weierstrass}\label{thm:Teorema d'aproximació polinòmica de Weierstrass}
 		Sigui \(f\colon[a,b]\longrightarrow\mathbb{R}\) una funció contínua. Aleshores existeix una successió de polinomis \((p_{n})_{n\in\mathbb{N}}\) que convergeix uniformement a \(f\) en l'interval \([a,b]\).
 		\begin{proof}
 			%TODO
