--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -292,7 +292,7 @@
 	\end{example}
 	\begin{theorem}[Teorema de Picard]
 		\labelname{Teorema de Picard}\label{thm:Teorema de Picard}
-		Siguin \(a\), \(b\) dos reals,
+		Siguin \(a\) i \(b\) dos reals,
 		\[\begin{cases}
 			\displaystyle\frac{\partial u(t)}{\partial t}=f(t,u(t)) \\
 			\displaystyle u(t_{0})=x_{0}
